src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>SFDC_Account_ID__c</fullName>
        <description>18 character id</description>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Account_Status__c</fullName>
        <label>Sales Target Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PROJECT BUSINESS GOALS
Identify target accounts in SFDC to align with sales account mapping 
Marketing and sales alignment and targeting programs 
Leverage ABM information without impacting sales target accounts 

BUSINESS IMPACT
Increase focus on target accounts 
Increase in projects/opportunities
A clear way for Field Marketing and Sales to identify specific accounts to run target campaigns and measure success</description>
        <label>z_Sales Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Group_Products_Closed_Won__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Subscription&quot;, associated with Closed Won Opportunities on the Account (Subscription: GraphDataScience, OEM, Startup, Discovery, Advanced, Business, Enterprise, Aura Enterprise, Bloom, Kerberos, Linkurious).
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Subscription&quot; associated with Closed Won Opportunities on the Account (Subscription: GraphDataScience, OEM, Startup, Discovery, Advanced, Business, Enterprise, Aura Enterprise, Bloom, Kerberos, Linkurious).</inlineHelpText>
        <label>Subscription Group Products (Closed Won)</label>
        <summaryFilterItems>
            <field>Opportunity.Subscription_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Group_Products_Open__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Subscription&quot;, associated with Open Opportunities on the Account (Subscription: GraphDataScience, OEM, Startup, Discovery, Advanced, Business, Enterprise, Aura Enterprise, Bloom, Kerberos, Linkurious).
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Subscription&quot; associated with Open Opportunities on the Account (Subscription: GraphDataScience, OEM, Startup, Discovery, Advanced, Business, Enterprise, Aura Enterprise, Bloom, Kerberos, Linkurious).</inlineHelpText>
        <label>Subscription Group Products (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.Subscription_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Qualification SDR, Qualification, Needs Analysis, Renewal 25%, Proposal/Price Quote, Renewal 50%, Selected / Negotiation, Renewal 75%, Renewal DQ 90%, Contract Negotiation, Procurement, Sales Ops Review, Finance Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Group_Products_Closed_Won__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Support&quot;, associated with Open Opportunities on the Account (Support: Dedicated, Enterprise, Managed Services, OEM, Platinum).
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Support&quot; associated with Open Opportunities on the Account (Support: Dedicated, Enterprise, Managed Services, OEM, Platinum).</inlineHelpText>
        <label>Support Group Products (Closed Won)</label>
        <summaryFilterItems>
            <field>Opportunity.Support_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Group_Products_Open__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Support&quot;, associated with Open Opportunities on the Account (Support: Dedicated, Enterprise, Managed Services, OEM, Platinum).
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Support&quot; associated with Open Opportunities on the Account (Support: Dedicated, Enterprise, Managed Services, OEM, Platinum).</inlineHelpText>
        <label>Support Group Products (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.Support_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Qualification SDR, Qualification, Needs Analysis, Renewal 25%, Proposal/Price Quote, Renewal 50%, Selected / Negotiation, Renewal 75%, Renewal DQ 90%, Contract Negotiation, Procurement, Sales Ops Review, Finance Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Support level for the customer determined by signed contract</description>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Provided by Partner</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Management_Notes__c</fullName>
        <description>JIRA: SFDCSPT-78</description>
        <inlineHelpText>This field is used for any notes related to Territory Management activities (e.g. temporarily tagging Accounts during reshuffling, temp notes, instructions, etc.)</inlineHelpText>
        <label>Territory Management Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__DUNS_Global_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Ultimate Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>All Child Accounts</relationshipLabel>
        <relationshipName>All_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Domain__c</fullName>
        <externalId>true</externalId>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Excluded_From_Account_Hierarchies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Default Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Global_Ultimate_Grouping_Id__c</fullName>
        <description>Field used by Traction Hierarchies for grouping by Global Ultimate Parent account in reports</description>
        <formula>TracHier__Hierarchy_ID__c</formula>
        <inlineHelpText>Use this field to group records by Global Ultimate Parent account in reports</inlineHelpText>
        <label>Global Ultimate Grouping Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Complete Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Last_Build_Hierarchy_Date__c</fullName>
        <description>The date and time of the most recent processing by Build Hierarchies.</description>
        <inlineHelpText>The date and time of the most recent processing by Build Hierarchies.</inlineHelpText>
        <label>Last Build Hierarchy Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Owner__c</fullName>
        <description>The name of the Sales rep who owns the Account.</description>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <inlineHelpText>The name of the Sales rep who owns the Account.</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direct Child Accounts</relationshipLabel>
        <relationshipName>Direct_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Primary_Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complete Company</label>
        <referenceTo>TracHier__Master_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Primary_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Territory</label>
        <referenceTo>TracHier__Territory__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Re_Run_Traction_Hierarchies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Traction Hierarchies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traction_GU_ID__c</fullName>
        <formula>IF(!ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId), &quot;unknown&quot;, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Id, 
BLANKVALUE(Parent.Id, Id)))))))))))</formula>
        <label>Traction GU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traction_GU_Name__c</fullName>
        <formula>IF(!ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId), &quot;Hierarchy greater than 10 levels&quot;, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Name, 
BLANKVALUE(Parent.Name, Name)))))))))))</formula>
        <label>Traction GU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traction_ID__c</fullName>
        <formula>Id</formula>
        <label>Traction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traction_Parent_ID__c</fullName>
        <formula>BLANKVALUE(Parent.Id, Id)</formula>
        <label>Traction Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traction_Parent_Name__c</fullName>
        <formula>BLANKVALUE(Parent.Name, Name)</formula>
        <label>Traction Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Territory__c</fullName>
        <description>Field that populates the US territory based off of the ship to state</description>
        <formula>IF(ISBLANK(ShippingState), &quot; &quot;,

IF(CONTAINS(&quot;Alaska:Hawaii:California:Washington:Oregon:Idaho:Nevada:Arizona:Utah:Wyoming:Montana:Colorado:New Mexico&quot;, ShippingState), &quot;West&quot;,

IF(CONTAINS(&quot;South Dakota:North Dakota:Nebraska:Kansas:Oklahoma:Texas:Louisiana:Arkansas:Missouri:Iowa:Minnesota:Wisconsin:Illinois:Tennessee:Mississippi:Alabama:Michigan:Indiana&quot;, ShippingState), &quot;Central&quot;,

IF(CONTAINS(&quot;Maine:Vermont:New Hampshire:Massachusetts:Connecticut:Pennsylvania:New York:New Jersey:Delaware:Washington DC:Maryland:West Virginia:Virginia:North Carolina:South Carolina:Georgia:Florida:Kentucky:Ohio:Rhode Island:District of Columbia:Puerto Rico&quot;, ShippingState), &quot;East&quot;,

&quot; &quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>based on data quality of shipping location</inlineHelpText>
        <label>US Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Account_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Accounts that were presented to the user at the time they created it.</description>
        <label>Account Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__EnrichedOn__c</fullName>
        <label>EnrichedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_Enrichment_Result__c</fullName>
        <label>RingLead Enrichment Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Ringlead_Id__c</fullName>
        <label>Ringlead Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__isRingLeadEnriched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRingLeadEnriched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_from_Whitespace__c</fullName>
        <description>This field is part of the Traction Hierarchy app implementation. It will be auto-populated whenever an Account is created through the Traction Hierarchy app using Whitespace and cleared once the standard fields have been populated once with D&amp;B data. This is a temp field to removed post Winter &apos;21 SFDC release that will allow Flow trigger to be limited to specific changes, not any changes on the record. Do NOT change field type to Checkbox as it will not work with Traction.
SFDCSPT-149</description>
        <inlineHelpText>This field is auto-populated whenever an Account is created through the Traction Hierarchy app using Whitespace and and cleared once the standard fields have been populated once with D&amp;B data.</inlineHelpText>
        <label>Update from Whitespace</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>VAT Number</description>
        <label>VAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Engagement_Score__c</fullName>
        <description>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</description>
        <inlineHelpText>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</inlineHelpText>
        <label>Predictive Engagement Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duns_num__c</fullName>
        <description>Dun and Bradstreet number</description>
        <label>DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id_for_n4jSFDC_sandbox_use_only__c</fullName>
        <description>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</description>
        <externalId>true</externalId>
        <inlineHelpText>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</inlineHelpText>
        <label>external id for n4jSFDC sandbox use only</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedBillingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedShippingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedBillingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Billing Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedShippingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Shipping Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutputVatCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this account for SUT companies.</description>
        <inlineHelpText>The tax status for this account for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first SUT tax code for this account.</description>
        <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second SUT tax code for this account.</description>
        <inlineHelpText>The second SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third SUT tax code for this account.</description>
        <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatStatus__c</fullName>
        <description>The tax status for this account for VAT/GST accounts.</description>
        <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>Unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>D&amp;B ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
        <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
        <label>Add BEIs To Existing Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
        <description>This records the worker correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the worker correlation key used within the erp system.</inlineHelpText>
        <label>Foundations Worker Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rh2__testCurrency__c</fullName>
        <label>Currency Test</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Is_Processed__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Changing_Account_List_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dgord</value>
        </filters>
        <label>Changing Account List View</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account_Record_Type</fullName>
        <active>true</active>
        <description>Customer Accounts only (Customer, Prospect, Past Customer, OEM, etc.)</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account_Record_Type</fullName>
        <active>true</active>
        <description>Partner Accounts only (Partner, Prospective Partner, Past Partner, etc.)</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Shipping_Country_Required</fullName>
        <active>false</active>
        <description>require billing and shipping country to be populated.   ( 2020-03-05T14:28:51-0800 context )</description>
        <errorConditionFormula>OR(
ISBLANK(BillingCountry ),
ISBLANK( ShippingCountry ))</errorConditionFormula>
        <errorMessage>Billing and Shipping Country required</errorMessage>
    </validationRules>
</CustomObject>